@@ -98,6 +98,7 @@
   Edouard G. Parmelan		Edouard.Parmelan@France.NCR.COM
   Erez Zadok			ezk@shekel.mcl.cs.columbia.edu
   Eric Estievenart		eric@via.ecp.fr
+  Erik van Pienbroek		erik-gnu@vanpienbroek.nl
   Ethan Mallove			ethan.mallove@sun.com
   Frank Ch. Eigler		fche@cygnus.com
   Fred Cox			sailorfred@yahoo.com
@@ -140,6 +141,7 @@
   Marcel Loose			loose@astron.nl
   Mark Kettenis			kettenis@phys.uva.nl
   Markus Duft			markus.duft@salomon.at
+  Martin Doucha			doucha@integri.cz
   Matthijs Kooijman		matthijs@stdin.nl
   Micheal E. Faenza		mfaenza@mitre.org
   Michael Haubenwallner		michael.haubenwallner@salomon.at
